# proxy-download

./: .gitignore  BUILD  BUILD.bazel  README.md  WORKSPACE  files.bzl  go.mod  matrix.bzl
.github/workflows/: bazel.yml
asset/: index.html
scripts/: build_bin_data.sh  build_target.sh
src/: BUILD.bazel  bindata.go  download_proxy.go  main.go
src/config/: config.go
src/proxy/: proxy.go
src/transfer/: direct.go  manager.go
