load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("//:files.bzl", "move_target_file")

[go_binary(
    name = goos + '-' + goarch,
    embed = ["//src:main"],
    goos = goos,
    goarch = goarch,
    out = goos + '-' + goarch + ('.exe' if goos == 'windows' else ''),
) for goos,goarch in [
    ('linux', 'amd64'),
    ('linux', '386'),
    ('windows', 'amd64'),
    ('darwin', 'amd64'),
]]

move_target_file(
    name = "move_file",
    target_folder = ":linux-amd64",
)
